# CAESAR_C

./: .gitignore  CAESARConfig.cmake.in  CAESAR_compressor.py  CAESAR_decompressor.py  CAESAR_hyper_decompressor.py  CMakeLists.txt  README.md  TODO.txt  build_script.sh  build_script_atlas.sh  build_script_frontier.sh  caesarConfig.cmake.in  download_models.sh  extract_tensors.py  main.cpp  module_load_list.txt  note.txt  requirements.txt  run_test_command.txt
.github/workflows/: cross-platform-test.yml
.ipynb_checkpoints/: CAESAR_compressor-checkpoint.py  CMakeLists-checkpoint.txt
CAESAR/: CAESAR.cpp  CAESAR.h  CMakeLists.txt  compressor.cpp  compressor.h  data_utils.cpp  data_utils.h  normalize.cpp
CAESAR/.ipynb_checkpoints/: CAESAR-checkpoint.cpp  CAESAR-checkpoint.h
CAESAR/dataset/: dataset.cpp  dataset.h
CAESAR/dataset/.ipynb_checkpoints/: dataset-checkpoint.cpp  dataset-checkpoint.h
CAESAR/models/: CMakeLists.txt  array_utils.h  caesar_compress.cpp  caesar_compress.h  caesar_de.cpp  caesar_decompress.cpp  caesar_decompress.h  compressor.h  model_cache.h  model_utils.cpp  model_utils.h  networkComponents.cpp  networkComponents.h  runGaeCuda.cpp  runGaeCuda.h  utils.cpp  utils.h
CAESAR/models/.ipynb_checkpoints/: caesar_compress-checkpoint.cpp  caesar_decompress-checkpoint.h  runGaeCuda-checkpoint.cpp
CAESAR/models/BCRN/: BSConvU.h  CMakeLists.txt  bcrnModel.cpp  bcrnModel.h  blocks.cpp  blocks.h
CAESAR/models/compress/: compressor.cpp  compressor.h
CAESAR/models/range_coder/: rans64.h  rans_coder.cpp  rans_coder.hpp
CAESAR/pretrainedModelIO/: CMakeLists.txt  CaesarModelLoader.cpp  CaesarModelLoader.h
exported_model/: caesar_decompressor.pt2  caesar_hyper_decompressor.pt2
models/compress_models/: compressor_before_range_coder.py
pyCAESAR/: compressor.py  compressor_orig.py  dataset.py
pyCAESAR/models/: RangeEncoding.py  network_components.py  run_gae_cuda.py
tests/: CMakeLists.txt  gen_data.py  testBcrn.cpp  testBinData.cpp  testBlocks.cpp  testBsconvu.cpp  testCaesarReader.cpp  testCompress.cpp  testDataSet.cpp  testDataSet2.cpp  testDataSet2.py  testDatasetNRMSE.cpp  testNetworkComponents.cpp  testRunGaeCuda.cpp  testUtils.cpp  testUtils2.cpp  test_CLI.sh  test_caesarC.cpp  test_caesarCD.cpp  test_decompress_consistency.cpp  test_padding.cpp  test_range_coder_consistency.cpp
tests/.ipynb_checkpoints/: CMakeLists-checkpoint.txt  test_caesarC-checkpoint.cpp
